# MIPS-simulator

./: .gitignore  Assembler.rar  CMakeLists.txt  Main.qml  README.md  Test.docx  TestForAssembler.txt  assembler.cpp  assembler.h  disassembler.cpp  disassembler.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h  systemsimulation.cpp  systemsimulation.h
MIPS-simulator-master/: CMakeLists.txt  assembler.cpp  assembler.h  main.h  systemsimulation.cpp
MIPS-simulator-master/MIPS-simulator-master/: assembler.h  mainprocess.cpp
back/: assembler.cpp  assembler.h  disassembler.cpp  disassembler.h  systemsimulation.cpp  systemsimulation.h
example/: mips1.asm
front/: Main.qml  MessagePopup.qml
middle/: Debug.cpp  Debug.h  FileProcess.cpp  FileProcess.h  codetablemodel.cpp  codetablemodel.h  memorytablemodel.cpp  memorytablemodel.h  registertablemodel.cpp  registertablemodel.h  tools.cpp  tools.h
